LG-01 feat: Criando a estrutura do site TalentHive

--- a/TalentHive/index.html
+++ b/TalentHive/index.html
@@ -3,9 +3,72 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>TalentHive</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <header class="header">
+        <div class="container header-inner">
+            <h1 class="logo">TalentHive</h1>
+            <nav class="menu" aria-label="Menu Principal">
+                <div class="menu-desktop-center">
+                    <ul class="menu-desktop-centro">
+                        <li> <a href="#">Home</a></li>
+                        <li> <a href="#">Hire Freelancer</a></li>
+                        <li> <a href="#">Explore</a></li>
+                        <li> <a href="#">PostJob</a></li>
+                        <li> <a href="#">About Us</a></li>
+                    </ul>
+                </div>
+            </nav>
+            <nav class="menu" aria-label="Menu Principal">
+                <div class="menu-mobile">
+                    <button id="menu-toggle" aria-label="Abrir menu mobile">☰</button>
+                </div>
+                <div class="menu-desktop-right">
+                    <ul class="menu-desktop-centro">
+                        <li> <a href="#">Login</a></li>
+                        <li> <a href="#">Start free</a></li>
+                    </ul>
+                </div>
+            </nav>
+        </div>
+    </header>
+
+    <main>
+        <section class="hero">
+                <h2>Find the job that fits your life style</h2>
+                <p>Discover the best remote jobs offer among the best flexiable companies over the geographic area</p>
+                <img src="/images/TalentHive-Capa.jpg" alt="Capa">
+        </section>
+
+        <section class="hero-video">
+            <h2>We help you to get your dream job watch intro</h2>
+            <img src="/images/video.jpg" alt="Video-app">
+        </section>
+
+        <section class="Functions">
+            <h2>Why you should choose TalentHive</h2>
+            <div class="grid container">
+                <div class="card">
+                    <h3>How to create TalentHive account?<a href="#">+</a></h3>
+                </div>
+            </div>
+
+            <div class="grid container">
+                <div class="card">
+                    <h3>Is there a free trial available?<a href="#">-</a></h3>
+                    <p>Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id  quod </p>
+                </div>
+            </div>             
+        </section>
+
+
+
+    </main>
+
+    <footer>
+
+    </footer>
 </body>
 </html>
