LG-02 feat: inalizando Etrutura e Adicionando CSS

--- a/TalentHive/index.html
+++ b/TalentHive/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TalentHive</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap" rel="stylesheet">
 </head>
+
 <body>
     <header class="header">
         <div class="container header-inner">
@@ -35,11 +38,11 @@
         </div>
     </header>
 
-    <main>
+    <main class="main">
         <section class="hero">
-                <h2>Find the job that fits your life style</h2>
-                <p>Discover the best remote jobs offer among the best flexiable companies over the geographic area</p>
-                <img src="/images/TalentHive-Capa.jpg" alt="Capa">
+            <h2>Find the job that fits your life style</h2>
+            <p>Discover the best remote jobs offer among the best flexiable companies over the geographic area</p>
+            <img src="/images/TalentHive-Capa.jpg" alt="Capa">
         </section>
 
         <section class="hero-video">
@@ -47,28 +50,88 @@
             <img src="/images/video.jpg" alt="Video-app">
         </section>
 
-        <section class="Functions">
+        <section class="questions">
             <h2>Why you should choose TalentHive</h2>
-            <div class="grid container">
-                <div class="card">
-                    <h3>How to create TalentHive account?<a href="#">+</a></h3>
+            <div class="functions">
+                <div class="functions-overlay">
+                    <div class="phone-image">
+                        <img src="/images/imagemFunctions.png" alt="Imagem Funções">
+                    </div>
+                </div>
+                <div class="grid container">
+                    <div class="card">
+                        <h3>How to create TalentHive account?<a href="#">+</a></h3>
+                    </div>
+                </div>
+
+                <div class="grid container">
+                    <div class="card">
+                        <h3>Is there a free trial available?<a href="#">-</a></h3>
+                        <p>Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id
+                            quod.</p>
+                    </div>
+                </div>
+
+                <div class="grid container">
+                    <div class="card">
+                        <h3>Can i change my plna later?<a href="#">+</a></h3>
+                    </div>
+                </div>
+
+                <div class="grid container">
+                    <div class="card">
+                        <h3>How do change my account email?<a href="#">+</a></h3>
+                    </div>
                 </div>
             </div>
-
-            <div class="grid container">
-                <div class="card">
-                    <h3>Is there a free trial available?<a href="#">-</a></h3>
-                    <p>Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id  quod </p>
-                </div>
-            </div>             
+        </section>
+        <section class="cta-section">
+            <div class="cta-content">
+                <h2>We`d like & love to help</h2>
+                <p>Get to knoww our hiring process before you appl or find answers to any ligening questions, right
+                    here, right now.</p>
+                <a href="#" class="btn">Learn more</a>
+            </div>
         </section>
 
-
+        <div class="divider-line"></div>
 
     </main>
-
-    <footer>
-
+    <footer class="footer">
+        <div class="container footer-inner">
+            <div class="foooter-brand column">
+                <h3>TalentHive</h3>
+                <p>Discover the best remote job offers among the best flexiable companies over the geographical area</p>
+            </div>
+            <div class="footer-links">
+                <div class="footer-column">
+                    <a href="#">Explore</a>
+                    <a href="#">Hire Freelancer</a>
+                    <a href="#">Post Job</a>
+                </div>
+                <div class="footer-column">
+                    <a href="#">About Us</a>
+                    <a href="#">Reources</a>
+                    <a href="#">Blog</a>
+                </div>
+                <div class="footer-column">
+                    <a href="#">Term & conditions</a>
+                    <a href="#">Privacy Policy</a>
+                    <a href="#">Become a Partner</a>
+                </div>
+                <div class="footer-column">
+                    <a href="#">Twitter</a>
+                    <a href="#">Facebook</a>
+                    <a href="#">Instagram</a>
+                </div>
+            </div>
+            <div class="footer-bottom">
+                <p>©2023 TalentHive. All rights reserved</p>
+                <p>101 Marlow Street, #12–05 Clife Parkview, Singapore 059020. <a href="#">View on Maps</a></p>
+                <p><a href="#">Cookies Policy</a> | <a href="#">Map</a></p>
+            </div>
+        </div>
     </footer>
 </body>
+
 </html>
