LG 01 - update: arrumando perguntas frequentes e footer

--- a/TalentHive/index.html
+++ b/TalentHive/index.html
@@ -60,13 +60,19 @@
                 </div>
                 <div class="grid container">
                     <div class="card">
-                        <h3>How to create TalentHive account?<a href="#">+</a></h3>
+                        <h3>
+                            <span>How to create TalentHive account?</span>
+                            <a href="#">+</a>
+                        </h3>
                     </div>
                 </div>
 
                 <div class="grid container">
                     <div class="card">
-                        <h3>Is there a free trial available?<a href="#">-</a></h3>
+                        <h3>
+                            <span>Is there a free trial available?</span>
+                            <a href="#">-</a>
+                        </h3>
                         <p>Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id
                             quod.</p>
                     </div>
@@ -74,13 +80,19 @@
 
                 <div class="grid container">
                     <div class="card">
-                        <h3>Can i change my plna later?<a href="#">+</a></h3>
+                        <h3>
+                            <span>i change my plna later?</span>
+                            <a href="#">+</a>
+                        </h3>
                     </div>
                 </div>
 
                 <div class="grid container">
                     <div class="card">
-                        <h3>How do change my account email?<a href="#">+</a></h3>
+                        <h3>
+                            <span>How do change my account email?</span>
+                            <a href="#">+</a>
+                        </h3>
                     </div>
                 </div>
             </div>
