--- a/TalentHive/index.html
+++ b/TalentHive/index.html
@@ -30,8 +30,8 @@
                 </div>
                 <div class="menu-desktop-right">
                     <ul class="menu-desktop-centro">
-                        <li> <a href="#">Login</a></li>
-                        <li> <a href="#">Start free</a></li>
+                        <li> <a href="#" class="login">Login</a></li>
+                        <li> <a href="#" class="button-start">Start free</a></li>
                     </ul>
                 </div>
             </nav>
@@ -104,44 +104,41 @@
                     here, right now.</p>
                 <a href="#" class="btn">Learn more</a>
             </div>
+            <div class="divider-line"></div>
         </section>
-
-        <div class="divider-line"></div>
-
     </main>
     <footer class="footer">
         <div class="container footer-inner">
-            <div class="foooter-brand column">
+            <div class="footer-brand column">
                 <h3>TalentHive</h3>
-                <p>Discover the best remote job offers among the best flexiable companies over the geographical area</p>
+                <p>Discover the best remote job offers among the best flexible companies over the geographical area</p>
             </div>
-            <div class="footer-links">
-                <div class="footer-column">
-                    <a href="#">Explore</a>
-                    <a href="#">Hire Freelancer</a>
-                    <a href="#">Post Job</a>
-                </div>
-                <div class="footer-column">
-                    <a href="#">About Us</a>
-                    <a href="#">Reources</a>
-                    <a href="#">Blog</a>
-                </div>
-                <div class="footer-column">
-                    <a href="#">Term & conditions</a>
-                    <a href="#">Privacy Policy</a>
-                    <a href="#">Become a Partner</a>
-                </div>
-                <div class="footer-column">
-                    <a href="#">Twitter</a>
-                    <a href="#">Facebook</a>
-                    <a href="#">Instagram</a>
-                </div>
+            <div class="footer-column">
+                <a href="#">Explore</a>
+                <a href="#">Hire Freelancer</a>
+                <a href="#">Post Job</a>
             </div>
-            <div class="footer-bottom">
-                <p>©2023 TalentHive. All rights reserved</p>
-                <p>101 Marlow Street, #12–05 Clife Parkview, Singapore 059020. <a href="#">View on Maps</a></p>
-                <p><a href="#">Cookies Policy</a> | <a href="#">Map</a></p>
+            <div class="footer-column">
+                <a href="#">About Us</a>
+                <a href="#">Resources</a>
+                <a href="#">Blog</a>
             </div>
+            <div class="footer-column">
+                <a href="#">Terms & conditions</a>
+                <a href="#">Privacy Policy</a>
+                <a href="#">Become a Partner</a>
+            </div>
+            <div class="footer-column">
+                <a href="#">Twitter</a>
+                <a href="#">Facebook</a>
+                <a href="#">Instagram</a>
+            </div>
+        </div>
+        <div class="footer-bottom">
+            <p>©2023 TalentHive. All rights reserved</p>
+            <p>101 Marlow Street, #12–05 Clife Parkview. Singapore 059020. <a href="#" class="maps">View on Maps</a></p>
+            <p><a href="#">Cookies Policy</a> | <a href="#">Map</a></p>
+        </div>
         </div>
     </footer>
 </body>
